--- a/index.html
+++ b/index.html
@@ -13,8 +13,12 @@
   <main class="main">
     <section class="todo">
       <div class="top">
-        <h1>Todo</h1>
-        <img src="images/icon-sun.svg" alt="">
+        <h1 class="tlogo">Todo</h1>
+        <!-- <img src="images/icon-sun.svg" alt="" class="changemode"> -->
+         <div>
+          <img src="images/icon-sun.svg" alt="" class="sun" onclick="playit()">
+         <img src="images/icon-moon.svg" alt="" class="moon" onclick="playit()">
+         </div>
       </div>
       <div class="inputpatner">
         <div>
@@ -23,7 +27,7 @@
             <div class="in2"><input type="text" placeholder="Create a new todo..." class="user"></div>
           </div>
         </div>
-        <button class="btn" onclick="showlist()">click</button>
+        <button class="btn" onclick="showlist()">Add</button>
       </div>
       <div class="listitem">
       </div>
